<resources>
    <string name="app_name">出来mai</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="framework_navi_home_page">首页</string>
    <string name="framework_navi_time_limit">限时购</string>
    <string name="framework_navi_shope_cart">购物车</string>
    <string name="framework_navi_mine">我的</string>
    <string name="home_page_filter_default">默认</string>
    <string name="home_page_filter_sales">销量</string>
    <string name="home_page_filter_price">价格</string>
    <string name="add_shop_cart">加入购物车</string>
    <string name="buy_immediately">立即购买</string>
    <string name="product_collection">收藏</string>
    <string name="product_detail">商品详情</string>
    <string name="pro_detail_tab_pro_info">商品信息</string>
    <string name="shop_cart_select_all">全选</string>
    <string name="to_settle_accounts">去结算</string>
    <string name="hint_text_input_phone_num">输入手机号</string>
    <string name="get_verify_text">获取验证码</string>
    <string name="hint_text_input_verify_code">输入验证码</string>
    <string name="hint_text_input_pwd">输入密码</string>
    <string name="hint_text_input_invite_code">输入邀请码（可不填）</string>
    <string name="text_regist">注册</string>
    <string name="regist_immediately" >立即注册</string>
    <string name="regist_immediately_phone_num">手机号快速登录</string>
    <string name="text_login">登录</string>
    <string name="prompt_phone_num_empty">请输入手机号！</string>
    <string name="prompt_pwd_empty">请输入密码！</string>
    <string name="prompt_phone_verify_code_empty">请输入验证码！</string>
    <string name="prompt_regist_phone_num_error">请重新获取验证码！</string>
    <string name="text_login_and_verify">验证并登录</string>
    <string name="text_commit">提交</string>
    <string name="symbol_add">+</string>
    <string name="symbol_minus">-</string>
    <string name="addr_info_empty">还没有收货地址</string>
    <string name="addr_manage_add_addr_info">添加收货地址</string>
    <string name="order_product_amount_string">商品总价</string>
    <string name="order_actually_pay_string">实付款</string>
    <string name="order_service_fee_minus_string">减免服务费</string>
    <string name="order_service_fee_string">服务费</string>
    <string name="hint_text_leave_msg_prompt">在这里给卖家留言</string>
    <string name="addr_edit_text_my_name">我的姓名：</string>
    <string name="prompt_addr_edit_name_input">请输入您的姓名</string>
    <string name="addr_edit_text_my_phone_num">我的手机：</string>
    <string name="prompt_addr_edit_phone_input">请输入您的手机号</string>
    <string name="addr_edit_text_my_gender">我的性别：</string>
    <string name="addr_edit_text_my_schoolr">我的学校：</string>
    <string name="prompt_addr_edit_school_input">请输入您的学校</string>
    <string name="prompt_addr_edit_addr_input">请输入您所在的公寓和宿舍号</string>
    <string name="about_me_order_scan_title">我的消费订单</string>
    <string name="order_waiting_pay">已下单</string>
    <string name="order_waiting_grab">已付款</string>
    <string name="order_have_accept">已取消</string>
    <string name="order_delivery">配送中</string>
    <string name="order_have_done">已完成</string>
    <string name="order_fix_addr_name_empty">收货人：无</string>
    <string name="order_fix_addr_detail_empty">收货地址：无</string>
    <string name="addr_edit_text_my_addr">我的地址：</string>
    <string name="prompt_addr_name_empty">请填写姓名</string>
    <string name="prompt_addr_phone_empty">请填写手机号码</string>
    <string name="prompt_addr_addr_empty">请填写地址</string>
    <string name="pay_online">在线支付</string>
    <string name="pay_delivery">货到付款</string>
    <string name="prompt_order_commit_faild">结算出错啦！</string>
    <string name="order_detail_payment_type">支付方式：</string>
    <string name="order_detail_leave_msg_title">我的留言：</string>
    <string name="order_detail_order_cancel">取消订单</string>
    <string name="pay_immediately">立即支付</string>
    <string name="user_info_title_portrait">头像</string>
    <string name="user_info_title_nick">昵称</string>
    <string name="user_info_title_signature">签名</string>
    <string name="user_info_title_gender">性别</string>
    <string name="user_info_province">省份</string>
    <string name="user_info_city">城市</string>
    <string name="user_info_area">区</string>
    <string name="user_info_street">地址</string>
    <string name="user_info_email">邮箱</string>
    <string name="navi_title_order_fix">填写订单</string>
    <string name="navi_title_shop_cart">购物车</string>
    <string name="navi_title_waiting_pay">待付款</string>

    <string name="prompt">提示</string>
    <string name="exit_app">你确定要退出应用吗?</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="complete">完成</string>
    <string name="save">完成</string>
    <string name="me">我</string>
    <string name="my">我的</string>
    <string name="navi_title_login">登录</string>
    <string name="pwd_forget">忘记密码？</string>
    <string name="navi_title_user_regist">注册</string>
    <string name="navi_title_login_fast">手机号快速登录</string>
    <string name="navi_title_pwd_back">找回密码</string>
    <string name="shop_cart_login_prompt">需要登录后才能查看购物车</string>
    <string name="prompt_at_least_one">请至少选择一件商品</string>
    <string name="prompt_login_faild">登录失败</string>
    <string name="prompt_progress_login">正在登陆...</string>
    <string name="prompt_progress_regist">正在注册...</string>
    <string name="prompt_verify_code_get_faild">获取验证码失败</string>
    <string name="prompt_bind_code_num_error">电话号码不匹配</string>
    <string name="prompt_verigy_code_error">验证码错误</string>
    <string name="prompt_progress_loading">正在加载...</string>
    <string name="prompt_progress_get_code">获取验证码...</string>
    <string name="prompt_regist_phone_verify_error">验证码输入错误</string>
    <string name="navi_title_addr_select">选择收货地址</string>
    <string name="navi_title_right_manage">管理</string>
    <string name="navi_title_addr_manage">管理地址</string>
    <string name="navi_title_addr_select_test">地址选择</string>
    <string name="navi_title_addr_xiugai">地址修改</string>
    <string name="navi_title_addr_add">地址新增</string>
    <string name="prompt_addr_edit_gender_input">请选择性别</string>
    <string name="prompt_order_cancel">订单取消成功</string>
    <string name="prompt_phone_num_not_match">请填写正确的电话号码</string>
    <string name="prompt_regist_reget_verify_code">请重新获取验证码！</string>
    <string name="prompt_commiting">提交中...</string>
    <string name="prompt_addr_info_delete_confirm">真的要删除吗？</string>
    <string name="prompt_delete_ing">删除中...</string>
    <string name="prompt_progress_saving">正在保存...</string>
    <string name="prompt_commit_succeed">提交成功</string>
    <string name="prompt_commit_faild">提交失败</string>
    <string name="prompt_shop_cart_product_delete">要删除该商品吗？</string>
    <string name="prompt_pro_select_none">请至少选择一项商品</string>
    <string name="navi_title_order_detail">订单详情</string>
    <string name="prompt_order_cancel_failed">订单取消失败</string>
    <string name="all_product">全部商品</string>
    <string name="prompt_delete_succeed">删除成功</string>
    <string name="prompt_order_delete_confirm">确定要取消此订单吗？</string>
    <string name="prompt_the_last_page">没有更多的数据了</string>
    <string name="pro_detail_tab_tuwen_info">图文详情</string>

    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="launch_from_wx">Launch From Weixin</string>
    <string name="shop_cart_product_empty">还没有商品</string>
    <string name="go_shopping">去购物</string>
    <string name="order_confirm">确认提交订单？</string>
    <string name="login_out_confirm">真的要退出吗？</string>
    <string name="gender_male">男</string>
    <string name="prompt_download_title">下载提示</string>
    <string name="prompt_no_wifi_download">您在目前的网络环境下继续下载将可能会消耗手机流量，请确认是否继续下载？</string>
    <string name="prompt_continue_download">继续下载</string>
    <string name="prompt_cancel_download">取消下载</string>
    <string name="prompt_update_download_next_time">下次再说</string>
    <string name="prompt_download">下载</string>
    <string name="notification_downloading">正在下载...</string>
    <string name="gender_femal">女</string>
    <string name="prompt_no_gender_select">请选择性别！</string>
    <string name="about_me_integral_detail">我的积分</string>
    <string name="about_me_integral_scan">查看积分详情</string>
    <string name="about_me_integral">我的积分</string>
    <string name="about_me_order_scan_integral_detail">查看积分详情</string>
    <string name="score_amount">总积分</string>
    <string name="score_today_title">积分详情</string>
    <string name="score_exchange">积分兑换</string>
    <string name="sign_day">每日签到</string>
    <string name="prompt_add_shop_cart_ing">加入购物车...</string>

</resources>
