<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.beetron.outmall.customview.NavigationView
        android:id="@+id/general_navi_id"
        android:layout_width="match_parent"
        android:layout_height="@dimen/general_navi_height">

    </com.beetron.outmall.customview.NavigationView>

    <EditText
        android:id="@+id/et_phone_input"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_general_height"
        android:layout_marginLeft="@dimen/regist_edit_margin"
        android:layout_marginRight="@dimen/regist_edit_margin"
        android:layout_marginTop="50dp"
        android:background="@android:color/white"
        android:drawableLeft="@mipmap/phone_num_ic"
        android:drawablePadding="@dimen/regist_drawable_padding"
        android:gravity="center_vertical"
        android:hint="@string/hint_text_input_phone_num"
        android:paddingLeft="@dimen/regist_drawable_padding"
        android:singleLine="true"
        android:textColorHint="@color/hint_color"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <!-- 密码-->
        <EditText
            android:id="@+id/et_pwd_input"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_general_height"
            android:layout_marginLeft="@dimen/regist_edit_margin"
            android:layout_marginRight="@dimen/regist_edit_margin"

            android:background="@android:color/white"
            android:drawableLeft="@mipmap/password_ic"
            android:drawablePadding="@dimen/regist_drawable_padding"
            android:gravity="center_vertical"
            android:hint="@string/hint_text_input_pwd"
            android:paddingLeft="@dimen/regist_drawable_padding"
            android:singleLine="true"
            android:textColorHint="@color/hint_color"/>

        <TextView
            android:id="@+id/btn_take_pwd_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/et_pwd_input"
            android:layout_below="@+id/et_pwd_input"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="left|center_vertical"
            android:text="@string/regist_immediately"
            android:textColor="@color/general_tab_text_color"
            android:textSize="@dimen/login_bottom_text_size"/>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_general_height"
        android:layout_marginLeft="@dimen/regist_edit_margin"
        android:layout_marginRight="@dimen/regist_edit_margin"
        android:layout_marginTop="25dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/text_login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/regist_edit_margin"
        android:layout_marginRight="@dimen/regist_edit_margin"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_login_to_regist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="left|center_vertical"
            android:text="@string/regist_immediately"
            android:textColor="@color/login_bottom_text_color"
            android:textSize="@dimen/login_bottom_text_size" />

        <TextView
            android:id="@+id/btn_login_to_fast_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="right|center_vertical"
            android:text="@string/regist_immediately_phone_num"
            android:textColor="@color/login_bottom_text_color"
            android:textSize="@dimen/login_bottom_text_size" />
    </LinearLayout>

</LinearLayout>