<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <!-- 商品总价-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/order_fix_content_padding"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_order_item_title"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/order_product_amount_string"
            android:textColor="@color/order_fix_text_color"
            android:textSize="@dimen/order_fix_text_size"/>

        <TextView
            android:id="@+id/tv_order_product_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/order_fix_text_color"
            android:textSize="@dimen/order_fix_text_size"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="@dimen/order_fix_content_padding"
        android:layout_marginRight="@dimen/order_fix_content_padding"
        android:background="@color/general_boundary_color"/>

    <!-- 服务费-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/order_fix_content_padding"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/order_service_fee_string"
            android:textColor="@color/order_fix_text_color"
            android:textSize="@dimen/order_fix_text_size"/>

        <TextView
            android:id="@+id/tv_order_service_fee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/order_fix_text_color"
            android:textSize="@dimen/order_fix_text_size"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="@dimen/order_fix_content_padding"
        android:layout_marginRight="@dimen/order_fix_content_padding"
        android:background="@color/general_boundary_color"/>

    <!-- 减免服务费-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/order_fix_content_padding"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/order_service_fee_minus_string"
            android:textColor="@color/order_fix_text_color"
            android:textSize="@dimen/order_fix_text_size"/>

        <TextView
            android:id="@+id/tv_order_service_fee_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/order_fix_text_color"
            android:textSize="@dimen/order_fix_text_size"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="@dimen/order_fix_content_padding"
        android:layout_marginRight="@dimen/order_fix_content_padding"
        android:background="@color/general_boundary_color"/>

    <!-- -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/order_fix_content_padding"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/order_actually_pay_string"
            android:textColor="@color/order_fix_text_color"
            android:textSize="@dimen/order_fix_text_size"/>

        <TextView
            android:id="@+id/tv_order_pay_actually"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/order_fix_text_color"
            android:textSize="@dimen/order_fix_text_size"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="@dimen/order_fix_content_padding"
        android:layout_marginRight="@dimen/order_fix_content_padding"
        android:background="@color/general_boundary_color"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/et_order_leave_msg"
        android:background="@null"
        android:hint="@string/hint_text_leave_msg_prompt"
        android:padding="@dimen/order_fix_content_padding"
        android:textColorHint="@color/hint_color"
        android:textSize="@dimen/order_fix_text_size"/>

</LinearLayout>